feat: playlist search